# meteor

./: CMakeLists.txt  README.md  package.xml
include/meteor/: testlibcall.h
matlab/: hellomatlab.m
matlab/TOOLBOX_calib/calib_example/: Calib_Results.m  Calib_Results.mat  Compute_Extrinsic_Init_Results.m  calib_data.mat  chessboard18.txt  compute_extrinsic_general.m  gen_lidar_points3.m  general_calib.m  go_general_calib_optim.m  lidar16.txt  lidar2.txt  lidar5.txt  lidar9.txt  pixel14.txt  pixel15.txt  pixel17.txt  pixel18.txt  pixel3.txt  pixel4.txt  pixel5.txt  pixel8.txt  pixel9.txt  planar_calib.m  read_pixel_lidar_points.m  saving_general_calib.m  traditional_calib.m
matlab/TOOLBOX_calib/calib_example/lidar/: lidar1.txt  lidar10.txt  lidar11.txt  lidar12.txt  lidar13.txt  lidar14.txt  lidar15.txt  lidar17.txt  lidar18.txt  lidar19.txt  lidar20.txt  lidar3.txt  lidar4.txt  lidar6.txt  lidar7.txt  lidar8.txt
matlab/TOOLBOX_calib/calib_example/pixel/: pixel1.txt  pixel10.txt  pixel11.txt  pixel12.txt  pixel13.txt  pixel16.txt  pixel19.txt  pixel2.txt  pixel20.txt  pixel6.txt  pixel7.txt
scripts/: calibrate_3d_rigid.py  calibrate_chessboard.py  imgproc_service_client_main.py  imgproc_service_server_assist.py
src/: imgproc_service_client_main.cpp  imgproc_service_server_assist.cpp  testlibcall.cpp
srv/: SrvTutorial.srv
